app/assets/css/main.css
/* ... */
@keyframes toast-pop {
  0% {
    transform: scale(0.9);
    opacity: 0;
  }

  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.menu-horizontal {
  display: inline-flex;
  width: -moz-max-content;
  width: max-content;
  flex-direction: row;
}

.menu-horizontal :where(li) {
  flex-direction: row;
}

.menu-horizontal > :where(li) > :where(ul) {
  top: 100%;
  left: initial;
}

.btn-group .btn:not(:first-child):not(:last-child), .btn-group.btn-group-horizontal .btn:not(:first-child):not(:last-child) {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.btn-group .btn:first-child:not(:last-child), .btn-group.btn-group-horizontal .btn:first-child:not(:last-child) {
  margin-left: -1px;
  margin-top: -0px;
  border-top-left-radius: var(--rounded-btn, 0.5rem);
  border-top-right-radius: 0;
  border-bottom-left-radius: var(--rounded-btn, 0.5rem);
  border-bottom-right-radius: 0;
}

.btn-group .btn:last-child:not(:first-child), .btn-group.btn-group-horizontal .btn:last-child:not(:first-child) {
  border-top-left-radius: 0;
  border-top-right-radius: var(--rounded-btn, 0.5rem);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: var(--rounded-btn, 0.5rem);
}

.btn-group.btn-group-vertical .btn:first-child:not(:last-child) {
  margin-left: -0px;
  margin-top: -1px;
  border-top-left-radius: var(--rounded-btn, 0.5rem);
  border-top-right-radius: var(--rounded-btn, 0.5rem);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.btn-group.btn-group-vertical .btn:last-child:not(:first-child) {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: var(--rounded-btn, 0.5rem);
  border-bottom-right-radius: var(--rounded-btn, 0.5rem);
}

.card-compact .card-body {
  padding: 1rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.card-compact .card-title {
  margin-bottom: 0.25rem;
}

.card-normal .card-body {
  padding: var(--padding-card, 2rem);
  font-size: 1rem;
  line-height: 1.5rem;
}

.card-normal .card-title {
  margin-bottom: 0.75rem;
}

.menu-horizontal :where(li.bordered > *) {
  border-left-width: 0px;
  border-bottom-width: 4px;
}

.menu-horizontal > :where(li:first-child) {
  border-top-left-radius: inherit;
  border-top-right-radius: unset;
  border-bottom-right-radius: unset;
  border-bottom-left-radius: inherit;
}

.menu-horizontal > :where(li:first-child) > :where(*:not(ul)) {
  border-top-left-radius: inherit;
  border-top-right-radius: unset;
  border-bottom-right-radius: unset;
  border-bottom-left-radius: inherit;
}

.menu-horizontal > :where(li:last-child) {
  border-top-left-radius: unset;
  border-top-right-radius: inherit;
  border-bottom-right-radius: inherit;
  border-bottom-left-radius: unset;
}

.menu-horizontal > :where(li:last-child) > :where(*:not(ul)) {
  border-top-left-radius: unset;
  border-top-right-radius: inherit;
  border-bottom-right-radius: inherit;
  border-bottom-left-radius: unset;
}

.m-8 {
  margin: 2rem;
}

.m-4 {
  margin: 1rem;
}

.m-5 {
  margin: 1.25rem;
}

.my-6 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.mt-20 {
  margin-top: 5rem;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.mb-14 {
  margin-bottom: 3.5rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mb-1 {
  margin-bottom: 0.25rem;
}

.flex {
  display: flex;
}

.h-48 {
  height: 12rem;
}

.h-20 {
  height: 5rem;
}

.h-70v {
  height: 70vh;
}

.h-screen {
  height: 100vh;
}

.h-full {
  height: 100%;
}

.h-24 {
  height: 6rem;
}

.h-2\/3 {
  height: 66.666667%;
}

.h-1\/3 {
  height: 33.333333%;
}

.h-80v {
  height: 80vh;
}

.h-2\/4 {
  height: 50%;
}

.h-1\/6 {
  height: 16.666667%;
}

.h-3\/6 {
  height: 50%;
}

.h-1\/2 {
  height: 50%;
}

.max-h-full {
  max-height: 100%;
}

.w-36 {
  width: 9rem;
}

.w-2\/5 {
  width: 40%;
}

.w-96 {
  width: 24rem;
}

.w-4\/5 {
  width: 80%;
}

.w-1\/3 {
  width: 33.333333%;
}

.w-full {
  width: 100%;
}

.w-2\/6 {
  width: 33.333333%;
}

.min-w-\[12\%\] {
  min-width: 12%;
}

.flex-1 {
  flex: 1 1 0%;
}

.flex-none {
  flex: none;
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.items-center {
  align-items: center;
}

.justify-end {
  justify-content: flex-end;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.gap-20 {
  gap: 5rem;
}

.gap-12 {
  gap: 3rem;
}

.gap-3 {
  gap: 0.75rem;
}

.space-x-20 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(5rem * var(--tw-space-x-reverse));
  margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
}

.self-center {
  align-self: center;
}

.rounded-full {
  border-radius: 9999px;
}

.rounded-2xl {
  border-radius: 1rem;
}

.rounded-lg {
  border-radius: 0.5rem;
}

.border-4 {
  border-width: 4px;
}

.border-b-4 {
  border-bottom-width: 4px;
}

.border-c-primary {
  --tw-border-opacity: 1;
  border-color: rgb(164 55 219 / var(--tw-border-opacity));
}

.bg-base-100 {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
}

.bg-c-primary {
  --tw-bg-opacity: 1;
  background-color: rgb(164 55 219 / var(--tw-bg-opacity));
}

.bg-gray-100 {
  --tw-bg-opacity: 1;
  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
}

.bg-card-primary {
  background-color: #B4ACD31A;
}

.bg-pale-purple {
  --tw-bg-opacity: 1;
  background-color: rgb(179 171 210 / var(--tw-bg-opacity));
}

.object-fill {
  -o-object-fit: fill;
     object-fit: fill;
}

.p-0 {
  padding: 0px;
}

.p-4 {
  padding: 1rem;
}

.p-8 {
  padding: 2rem;
}

.px-2\.5 {
  padding-left: 0.625rem;
  padding-right: 0.625rem;
}

.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.py-1 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.pb-20 {
  padding-bottom: 5rem;
}

.pt-6 {
  padding-top: 1.5rem;
}

.pl-1 {
  padding-left: 0.25rem;
}

.pb-52 {
  padding-bottom: 13rem;
}
/* ... */

